--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "server": "node server.js",
+        "start": "node server.js",
         "setup:db": "node scripts/setup-neon.js"
     },
     "dependencies": {
